added auto-complete text field no way to customize its css deeply, don't know if we should leave it