@@ -41,6 +41,7 @@ dependencies {
 
 application {
     mainClass = 'jmail.client.Main'
+    applicationDefaultJvmArgs = ['--add-opens=javafx.controls/javafx.scene.control=ALL-UNNAMED', '--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED']
 }
 
 javafx {
